Mon Feb 23 23:35:37 2004  Jonathan Blandford  <jrb@gnome.org>

	* po/no.po: new file from Kjartan Maraas.

Sun Feb 22 17:47:39 2004  Thomas Leonard  <tal00r@ecs.soton.ac.uk>

	* freedesktop.org.xml.in: add types from ImageMagick (patch
	from Guido Schimmels).

Wed Feb 18 10:30:32 2004  Jonathan Blandford  <jrb@gnome.org>

	* freedesktop.org.xml.in: Patch from Shaun McCance to add .flac
	detection.

Mon Feb  2 11:45:05 2004  Thomas Leonard  <tal00r@ecs.soton.ac.uk>

	* freedesktop.org.xml.in: make MIME descriptions more consistant
	with each other (patch from Christian Neumair).

Wed Jan 21 14:28:16 2004  Jonathan Blandford  <jrb@gnome.org>

	* shared-mime-info.pc.in: add a package-config file

Tue Jan 20 10:22:44 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: Patch from Alex Larsson <alexl@redhat.com> to
	conditionally disable running update-mimedb for packages.

	* freedesktop.org.xml.in: Patch from Alex Larsson
	<alexl@redhat.com> to fix up RIFF and shell magic, as well as
	merging diff files and patch files.

Wed Jan 14 16:45:26 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: I already tagged CVS so I'm releasing 0.13.1 to
	get the intltool files.

	* Makefile.am: I wasn't including the intltool files correctly.
	Fixed.

Wed Jan 14 16:27:10 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: ...except version 0.12 was already released.
	Releasing lucky version 0.13.

Wed Jan 14 16:23:22 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: Released version 0.12.

	* Makefile.am: Make pass distcheck.

	* freedesktop.org.xml.in: Update DTD to deal with xml:lang

Tue Jan 13 16:32:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* po/no.po: new translation

	* po/fr.po: Noticed it was in ISO8559-1.  Converted to UTF-8.

Mon Jan 12 13:39:45 2004  Jonathan Blandford  <jrb@gnome.org>

	* po/fi.po: new translation

	* po/fr.po: new translation

	* po/nn.po: new translation
